--- a/build.xml
+++ b/build.xml
@@ -39,34 +39,35 @@
     </target>
 
     <!-- Ejecutar la prueba 0 -->
-    <target name="test-0" depends="compile">
+    <target name="test-sintactico_bien" depends="compile">
         <java classname="main.java.Main" fork="true" classpath="${build.dir}">
+            <arg value="tst/prueba.txt"/>
         </java>
     </target>
 
     <!-- Ejecutar la prueba 1 -->
-    <target name="test-1" depends="test-0">
+    <target name="test-sintactico_bien-2" depends="test-sintactico_bien">
         <java classname="main.java.Main" fork="true" classpath="${build.dir}">
             <arg value="tst/prueba2.txt"/>
         </java>
     </target>
 
     <!-- Ejecutar la prueba 2 -->
-    <target name="test-2" depends="test-1">
+    <target name="test-sintactico_bien-3" depends="test-sintactico_bien-2">
         <java classname="main.java.Main" fork="true" classpath="${build.dir}">
             <arg value="tst/prueba3.txt"/>
         </java>
     </target>
 
     <!-- Ejecutar la prueba 3 -->
-    <target name="test-3" depends="test-2">
+    <target name="test-sintactico_mal" depends="test-sintactico_bien-3">
         <java classname="main.java.Main" fork="true" classpath="${build.dir}">
             <arg value="tst/prueba4.txt"/>
         </java>
     </target>
 
-    <!-- Ejecutar la prueba 4 -->
-    <target name="run" depends="test-3">
+    <!-- Ejecutar final -->
+    <target name="run" depends="test-sintactico_mal">
         <java classname="main.java.Main" fork="true" classpath="${build.dir}">
             <arg value="tst/prueba5.txt"/>
         </java>
